<resources>
    <string name="app_name">Galgeleg</string>
    <string name="hovedmenu_titel">Velkommen til Galgeleg spillet</string>
    <string name="galgeleg_titel">Galgeleg</string>
    <string name="højeste_score_titel">Højeste Score</string>
    <string name="hjælp_titel">Hjælp</string>

    <string name="hovedmenu_menu_tekst">Hovedmenu</string>
    <string name="galgeleg_menu_tekst">Spil Galgeleg</string>
    <string name="højeste_score_menu_tekst">Højeste Score</string>
    <string name="hjælp_menu_tekst">Hjælp</string>
    <string name="chat_menu_tekst">Chat</string>

    <string name="indtast_bogstav">Indtast bogstav</string>
    <string name="gaet">GÆT!</string>
    <string name="antal_fejl">Antal fejl</string>
    <string name="gaettede_bogstaver">Gættede bogstaver</string>
    <string name="ordet_er">Ordet er:</string>
    <string name="nyt_ord">Nyt ord</string>
    <string name="tv_spiller">Spiller: Logged ud</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="galgelegbillede">galgebillede</string>
    <string name="henter_ord_fra_DR">Henter ord fra DR...</string>
    <string name="venter_på_valg">Venter på valg af ord...</string>
    <string name="ordet_var">Ordet var:</string>
    <string name="hmm">hmm...</string>

    <string name="chat_send">Send</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_out_menu_tekst">Log ud</string>
</resources>
