<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="com.example.u_09.androidlektion1.GalgeActivity">

	<item android:id="@+id/action_main_menu"
	      android:title="@string/hovedmenu_menu_tekst"
	      android:orderInCategory="1"
	      app:showAsAction="ifRoom"
		/>

	<item android:id="@+id/action_game"
	      android:title="@string/galgeleg_menu_tekst"
	      android:orderInCategory="2"
	      app:showAsAction="never"
		/>

	<item android:id="@+id/action_highscore"
	      android:title="@string/højeste_score_menu_tekst"
	      android:orderInCategory="3"
	      app:showAsAction="never"
		/>

	<item android:id="@+id/action_help"
	      android:title="@string/hjælp_menu_tekst"
	      android:orderInCategory="4"
	      app:showAsAction="never"
		/>

</menu>