<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/lightblack"
              android:gravity="center|top"
              android:orientation="vertical"
              tools:context=".View.MainMenuFragment"
	>

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:src="@drawable/solution_picture"
		android:contentDescription="@string/galgelegbillede"
		/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:gravity="center"
		android:orientation="vertical"
		>

		<Button
			android:id="@+id/button_play_game"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			android:backgroundTint="@color/lightgreen"
			android:text="@string/galgeleg_menu_tekst"
			/>

		<Button
			android:id="@+id/button_highscore"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			android:backgroundTint="@color/lightblue"
			android:text="@string/højeste_score_menu_tekst"
			/>

		<Button
			android:id="@+id/button_chat"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:backgroundTint="@color/lightblue"
			android:text="@string/chat_menu_tekst"
			/>

		<Button
			android:id="@+id/button_help"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			android:backgroundTint="@color/lightblue"
			android:text="@string/hjælp_menu_tekst"
			/>

	</LinearLayout>

</LinearLayout>
